# Mini-Instagram_FastAPI

./: README.md  frontend.py  main.py  pyproject.toml  test.db
app/: app.py  db.py  images.py  schemas.py  users.py
